--- a/clockhash.yml
+++ b/clockhash.yml
@@ -1,7 +1,10 @@
+#a sample file 
+
+
 codebase: java
 kubeconfig-file: /home/avinash/.kubeconfig
 registry:
   password: bmFudTQz
-  registryname: dockerhub
+  registryurl: dockerhub
   username: avi263
 repo: github
